@@ -4,4 +4,4 @@ bison (GNU Bison) 3.3.1
 flex 2.6.0
 ltmain.sh (GNU libtool) 2.4.6
 m4 (GNU M4) 1.4.18
-makeinfo (GNU texinfo) 6.5
+makeinfo (GNU texinfo) 6.6
