@@ -8,7 +8,7 @@
 #line 83 "cwebdir/ctangle.w"
 
 /*:2*//*6:*/
-#line 45 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 #ifndef HAVE_GETTEXT
 #define HAVE_GETTEXT 0
@@ -164,7 +164,7 @@
 #line 66 "cwebdir/ctangle.w"
 
 /*5:*/
-#line 37 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 typedef bool boolean;
 typedef uint8_t eight_bits;
@@ -173,7 +173,7 @@ extern int program;
 extern int phase;
 
 /*:5*//*7:*/
-#line 79 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 char section_text[longest_name+1];
 char*section_text_end= section_text+longest_name;
@@ -181,7 +181,7 @@ char*id_first;
 char*id_loc;
 
 /*:7*//*8:*/
-#line 94 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern char buffer[];
 extern char*buffer_end;
@@ -189,7 +189,7 @@ extern char*loc;
 extern char*limit;
 
 /*:8*//*9:*/
-#line 109 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 typedef struct name_info{
 char*byte_start;
@@ -223,7 +223,7 @@ extern void print_section_name(name_pointer);
 extern void sprint_section_name(char*,name_pointer);
 
 /*:9*//*10:*/
-#line 150 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern int history;
 extern int wrap_up(void);
@@ -232,7 +232,7 @@ extern void fatal(const char*,const char*);
 extern void overflow(const char*);
 
 /*:10*//*11:*/
-#line 165 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern int include_depth;
 extern FILE*file[];
@@ -256,7 +256,7 @@ extern void check_complete(void);
 extern void reset_input(void);
 
 /*:11*//*12:*/
-#line 188 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern sixteen_bits section_count;
 extern boolean changed_section[];
@@ -264,14 +264,14 @@ extern boolean change_pending;
 extern boolean print_where;
 
 /*:12*//*13:*/
-#line 200 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern int argc;
 extern char**argv;
 extern boolean flags[];
 
 /*:13*//*14:*/
-#line 212 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern FILE*C_file;
 extern FILE*tex_file;
@@ -281,7 +281,7 @@ extern FILE*check_file;
 extern FILE*active_file;
 
 /*:14*//*15:*/
-#line 222 "cwebdir/comm-w2c.h"
+#line 111 "cwebdir/ctang-w2c.ch"
 
 extern void common_init(void);
 extern void print_stats(void);
